--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <title>Parcel Sandbox</title>
     <meta charset="UTF-8" />
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <link href="src/styles.css" />
+    <link href="src/styles.css"
+    rel="stylesheet" />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
